# svd_board

./: .gitignore  Cargo.toml  README.md  STM32F7x.svd  build.rs
svd/: STM32F46_79x.svd  ST_License.html
